added search to the list of articles
